document is not defined ReactQuill fix

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-share": "^5.1.0",
@@ -51,11 +52,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/chart.js": "^2.9.41",
     "@types/draft-convert": "^2.1.8",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.46",
     "@types/react-draft-wysiwyg": "^1.13.8",
+    "@types/react-html-parser": "^2.0.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
